--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         Друга вкладка Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor magnam corporis accusamus quos natus deleniti fugiat minus eius, laborum quae adipisci veritatis, eveniet a autem iste eaque nesciunt nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor magnam corporis accusamus quos natus deleniti fugiat minus eius, laborum quae adipisci veritatis, eveniet a autem iste eaque nesciunt nam.
                     </div>
                     <div class="tab tab-3">
-                        Третя вкладка Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor magnam corporis accusamus quos natus deleniti fugiat minus eius, laborum quae adipisci veritatis, eveniet a autem iste eaque nesciunt nam.
+                        Третя вкладка Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor magnam corporis accusamus quos natus deleniti fugiat minus eius, laborum quae adipisci veritatis, eveniet a autem iste eaque nesciunt nam
                     </div>
                 </div>
             </div>
